# founding-ai-engineer-case-study

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PROMPTS.md  README.md  pyproject.toml  requirements.txt
data/: Model.xlsx  firm_policy.md
docs/: ARCHITECTURE.md  EVALUATION.md  PROMPTS.md  SCHEMA.md
src/: __init__.py  agent.py  api.py  extraction.py  main.py  outputs.py  rendering.py  schema.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts
